# SwordsAndStuff

./: .gitignore  Readme.txt  todo.txt
VS2015/SwordsAndStuff/: SwordsAndStuff.sln
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
config/: laptoprootconfig.toml  rootconfig.toml
config/gui/: charcreationconfig.txt  mainmenugui.toml
documentation/: ComponentIDs.txt  SepllDesign.txt
engine/: CMakeLists.txt
engine/SAS/include/Components/: AIComponent.h  AngleComponent.h  BoundingRectangleComponent.h  CollisionComponent.h  DamageComponent.h  DescriptionComponent.h  EquipmentComponent.h  InputComponent.h  InventoryComponent.h  PositionComponent.h  RPGStatsComponent.h  RenderComponent.h  ScriptComponent.h  SpellCastingComponent.h  SpellbookComponent.h  StatsComponent.h  TTLComponent.h  TargetingComponent.h  VelocityComponent.h
engine/SAS/include/Config/: ComponentDefines.h  GameDefines.h  GeneralConfig.h
engine/SAS/include/DataManagement/: ItemDatabase.h
engine/SAS/include/ECSFramework/: Component.h  ECSManager.h  EntityManager.h  MessageQueue.h  MessageQueueContainer.h  System.h  SystemManager.h
engine/SAS/include/GameMechanics/: Buffs.h  StatGenerator.h
engine/SAS/include/GameMechanics/Spells/: GlobalSpellbook.h  SpellCrafting.h  SpellFactory.h
engine/SAS/include/GameStates/StateFramework/: Game.h  GameState.h  GameStateManager.h
engine/SAS/include/GameStates/States/: CharacterCreationState.h  GameRunningState.h  MainMenuState.h
engine/SAS/include/GameWorld/: Camera.h  GameWorld.h  TileMap.h
engine/SAS/include/GameWorld/Cities/: City.h
engine/SAS/include/GameWorld/Lore/: Pantheon.h
engine/SAS/include/HUD/: HUDManager.h
engine/SAS/include/HUD/HUDComponents/: FillBar.h  HUDComponent.h
engine/SAS/include/SubSystems/: CollisionResolver.h  PlayerInput.h
engine/SAS/include/Systems/: AISystem.h  CameraSystem.h  CollisionSystem.h  EquipmentSystem.h  InputSystem.h  InventorySystem.h  MeleeSystem.h  MovementSystem.h  PlayerTargetingSystem.h  ProcessingSystem.h  QueueSystem.h  RenderSystem.h  ScriptedEntitySystem.h  SpellCreationSystem.h  TimeToLiveSystem.h  TriggeredSystem.h
engine/SAS/include/Types/: DamageAttributes.h  Items.h  MessageTypes.h  PlayerInfo.h  Spell.h  SpellComponent.h  SpellMotion.h  Spells.h  Stats.h
engine/SAS/include/Types/AITypes/: AIPathing.h  AIScripted.h
engine/SAS/include/Utilities/: QuadTree.h  SparseGrid.h  UtilityStructures.h
engine/SAS/src/: CMakeLists.txt  main.cpp
engine/SAS/src/ECSFramework/: ECSManager.cpp  EntityManager.cpp  System.cpp
engine/SAS/src/GameMechanics/: StatGenerator.cpp
engine/SAS/src/GameMechanics/Spells/: SpellFactory.cpp
engine/SAS/src/GameStates/StateFramework/: Game.cpp  GameStateManager.cpp
engine/SAS/src/GameStates/States/: CharacterCreationState.cpp  GameRunningState.cpp  MainMenuState.cpp
engine/SAS/src/GameWorld/: Camera.cpp  GameWorld.cpp  TileMap.cpp
engine/SAS/src/GameWorld/Cities/: City.cpp  CityManager.cpp
engine/SAS/src/GameWorld/Lore/: Pantheon.cpp
engine/SAS/src/HUD/: HUDManager.cpp
engine/SAS/src/HUD/HUDComponents/: FillBar.cpp
engine/SAS/src/SubSystems/: CollisionResolver.cpp  MonsterSpawner.cpp  PlayerInput.cpp
engine/SAS/src/Systems/: AISystem.cpp  CameraSystem.cpp  CollisionSystem.cpp  EquipmentSystem.cpp  InputSystem.cpp  InventorySystem.cpp  MeleeSystem.cpp  MovementSystem.cpp  PlayerTargetingSystem.cpp  ProcessingSystem.cpp  QueueSystem.cpp  RenderSystem.cpp  ScriptedEntitySystem.cpp  SpellCreationSystem.cpp  TimeToLiveSystem.cpp  TriggeredSystem.cpp
engine/SAS/src/Types/: SpellComponent.cpp
engine/SAS/src/Utilities/: QuadTree.cpp  SparseGrid.cpp
engine/SAS_GUI/include/: Builder.h  GUIBuilder.h  GUIManager.h  GUIMessaging.h  GUIUtils.h  Model.h
engine/SAS_GUI/include/GUIComponents/: Button.h  Component.h  Container.h  ContainerView.h  Cursor.h  DropdownMenu.h  DynamicText.h  FillBar.h  GUIButton.h  GUIComponent.h  GUIImage.h  GUIWindow.h  Image.h  Label.h  TextBox.h  ValueComponent.h  Window.h
engine/SAS_GUI/include/GUIDynamics/: Dynamics.h
engine/SAS_GUI/include/GUIViews/: ButtonView.h  DropdownMenuView.h  TextView.h  WindowView.h
engine/SAS_GUI/src/: Builder.cpp  CMakeLists.txt  GUIBuilder.cpp  GUIManager.cpp  GUIUtils.cpp
engine/SAS_GUI/src/GUIComponents/: Button.cpp  Container.cpp  DropdownMenu.cpp  GUIButton.cpp  GUIWindow.cpp  TextBox.cpp  Window.cpp
engine/SAS_Rendering/: CMakeLists.txt
engine/SAS_Rendering/include/: RenderingDefines.h  RenderingManager.h  SDLManager.h  SDLRenderer.h  Texture.h  TextureManager.h
engine/SAS_Rendering/src/: CMakeLists.txt  RenderingManager.cpp  SDLManager.cpp  SDLRenderer.cpp  Texture.cpp  TextureManager.cpp
engine/SAS_System/include/: SystemControl.h  SystemDefines.h
engine/SAS_System/include/FileParser/: cpptoml.h
engine/SAS_System/include/Input/: Input.h
engine/SAS_System/include/Rendering/: Renderer.h  Texture.h  TextureManager.h  TypeConversions.h
engine/SAS_System/src/: CMakeLists.txt  SystemControl.cpp
engine/SAS_System/src/Input/: Input.cpp
engine/SAS_System/src/Rendering/: Renderer.cpp  Texture.cpp  TextureManager.cpp
engine/SAS_TEST/src/: CMakeLists.txt  main.cpp
engine/SAS_Utils/include/: DiamondSquare.h  Geometry.h  HeightMapGenerator.h  MapMath.h  Voronoi.h
engine/SAS_Utils/src/: CMakeLists.txt  DiamondSquare.cpp  HeightMapGenerator.cpp  MapMath.cpp  Voronoi.cpp
engine/SAS_Utils_TEST/src/: CMakeLists.txt  main.cpp
include/Components/: AIComponent.h  AngleComponent.h  BoundingRectangleComponent.h  CollisionCallbacks.cpp  CollisionComponent.h  DescriptionComponent.h  EquipmentComponent.h  InputComponent.h  InventoryComponent.h  ItemStatsComponent.h  PositionComponent.h  RPGStatsComponent.h  RenderComponent.h  ScriptComponent.h  ShootingComponent.h  SpellCastingComponent.h  SpellbookComponent.h  TargetingComponent.h  VelocityComponent.h
include/Config/: CollisionCallbacks.h  ComponentDefines.h
include/ECSFramework/: ECSManager.h  ECSManagerToSystemMessage.h  EntityManager.h  MessageQueue.h  MessageQueueContainer.h  System.h  (+3 more)
src/: main.cpp
(+109 files in other folders)
